# post-from-telegram-to-wordpress

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  bot.py  main.py  pyproject.toml  settings.py  start.sh  wp.py
rest/: wp.py
telegram_to_wordpress/rest/: wordpress.py
telegram_to_wordpress/telegram_bot/: core.py  handlers.py
telegram_to_wordpress/wordpress/: core.py  serializers.py
tg/: bot.py
wp/: serializers.py  wp.py
